--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: white;
+    --branco: #ffffff;
     --cor-de-fundo: #09090a;
     --fundo-senha: #390153;
     --fundo-texto: #031940;
@@ -12,11 +12,14 @@
 
 * {
     font-weight: 400;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    color: var(--branco);
     background-color: var(--cor-de-fundo);
+    color: var(--branco);
     font-family: var(--roboto);
 }
 
@@ -29,16 +32,21 @@ body {
     font-size: 24px;
 }
 
+.conteudo {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 .conteudo-titulo {
     text-align: center;
     margin-top: 80px;
 }
 
 .conteudo-senha {
-    margin-top: 80px;
-    background: var(--fundo-senha);
+    background-color: var(--fundo-senha);
     padding: 24px;
     border-bottom: 6px solid var(--borda);
+    margin-top: 80px;
 }
 
 #campo-senha {
@@ -52,11 +60,6 @@ body {
 
 #campo-senha:focus {
     outline: none;
-}
-
-.conteudo {
-    max-width: 1200px;
-    margin: 0 auto;
 }
 
 .parametro {
@@ -79,6 +82,12 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+    .parametro-coluna__senha {
+        flex-direction: row;
+    }
 }
 
 .parametro-senha {
@@ -104,8 +113,8 @@ body {
     padding: 24px;
     border-top: 2px solid var(--borda);
     border-bottom: 2px solid var(--borda);
-    margin: 0;
     font-size: 24px;
+    margin: 0;
 }
 
 label {
@@ -128,6 +137,7 @@ label {
     height: 30px;
     position: relative;
     bottom: 30px;
+    transition: width 0.3s ease-in-out;
 }
 
 .fraca {
@@ -136,23 +146,16 @@ label {
 }
 
 .media {
-    background-color: #FAF408;
     width: 50%;
+    background-color: #FAF408;
 }
 
 .forte {
-    background-color: #00FF85;
     width: 100%;
+    background-color: #00FF85;
 }
 
 .parametro-senha-textos {
     display: flex;
     justify-content: space-between;
-}
-
-
-@media screen and (min-width: 768px) {
-    .parametro-coluna__senha {
-        flex-direction: row;
-    }
 }
